# brun

./: CMakeLists.txt  README.md
.github/workflows/: build-deb-amd64.yml
data/: project.desktop
scripts/: build-deb.sh  install-build-deps.sh
src/: CMakeLists.txt
src/code/: main.cpp
src/controls/: CalcButton.qml  PadInput.qml  PadLayout.qml  main.qml  qml.qrc
